Product concepts redesign bug fixes and minor additions
- The search button now looks more disabled when it is disabled
- Fixed top border radius for the dropdown when they go above the select box
- Added ability to search with not all options chosen
- Removed cdn for loading.css and put the only animation being used into main.scss
- Tweaked the html/shell/api boxes padding to show the results better, and displays the user's actual API key in the shell command box
- The search bar for the table is now working
- Fixed the issue of search bar terms spilling out of their containers (the icons beneath the search bar showing what was selected)
- Fixed an issue where the navbar underline wasn't moving properly on resize of window
- Added favicons
- Fixed an issue where the search terms on the results page weren't displaying properly

--- a/php/public/stylesheets/main.scss
+++ b/php/public/stylesheets/main.scss
@@ -227,8 +227,8 @@ main {
 // Container for the icons under the search 
 // bar showing the parameters of the search
 .term-group {
-    display: block;
-    margin-top: 0px;
+    display: none;
+    margin-top: 10px;
     margin-bottom: 0 !important;
     overflow-y: auto;
 }
@@ -245,7 +245,6 @@ main {
     height: auto;
     margin-right: 10px;
     margin-top: 10px;
-    display: none;
 }
 
 // The text of the icons under the search bar
